Codestyle changes